# serializer version: 1
# name: test_reauth_confirm_form_snapshot
  dict({
    'description_placeholders': dict({
      'host': '1.2.3.4',
      'name': 'Mock Title',
    }),
    'errors': dict({
    }),
    'fields': dict({
      'host': dict({
        'default': 'default_factory.<locals>.<lambda>()',
        'required': False,
      }),
    }),
    'step_id': 'reauth_confirm',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_reconfigure_confirm_form_snapshot
  dict({
    'description_placeholders': dict({
      'host': '1.2.3.4',
    }),
    'errors': dict({
    }),
    'fields': dict({
      'host': dict({
        'default': 'default_factory.<locals>.<lambda>()',
        'required': False,
      }),
      'port': dict({
        'default': 'default_factory.<locals>.<lambda>()',
        'required': False,
      }),
    }),
    'step_id': 'reconfigure_confirm',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
